# boomgame

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  MANIFEST.in  README.md  boom.py  index.html  preprocess_data.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: deploy.yml  tests.yml
bomberman/: __init__.py  bomberman.py  main.py
bomberman/controller/: __init__.py  control.py  controller.py
bomberman/data/: Preprocessing.ipynb
bomberman/data/control/: player0.txt  player1.txt  player2.txt
bomberman/data/game/: test.json
bomberman/data/maze/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  (+40 more)
bomberman/data/original/: KRM Init BOOM.plist
bomberman/data/original/BOOM Music/: BOOM Music 2.m4a  BOOM Music 3.m4a  BOOM Music 4.m4a  BOOM Music 5.m4a  BOOM Music 6.m4a  BOOM Music 8.m4a
bomberman/data/original/English.lproj/: InfoPlist.strings  JoystickConfig.nib  Localizable.strings  MainMenu.nib  NewVersion.nib  OpenGame.nib  Preferences.nib  Reminder.nib  URLs.strings
bomberman/data/original/English.lproj/BOOMHelp/: BOOMHelp.helpindex
bomberman/data/original/English.lproj/BOOMHelp/pgs/: acknowledgements.html  configure.html  contact.html  credits.html  disclaimer.html  faq.html  fullscreen.html  purchasing.html  registering.html  requirements.html  save.html  story.html  updates.html  whatsboom.html
bomberman/data/original/Italian.lproj/: About.nib  Continue.nib  JoystickConfig.nib  NetAccess.nib  NewVersion.nib  OpenGame.nib  Preferences.nib  Registration.nib
bomberman/data/original/Italian.lproj/BOOMHelp/pgs/: configure.html  credits.html  disclaimer.html  fullscreen.html  history.html  purchasing.html  registering.html  releasenotes.html  requirements.html  save.html
bomberman/designpattern/: __init__.py  event.py  observable.py  observer.py
bomberman/menu/: actions.py  element.py  menu.py  theme.py
bomberman/model/: __init__.py  entity.py  events.py  game.py  maze.py  menu.py  obstacle.py  player.py  timer.py  vector.py
bomberman/sound/: __init__.py  entity_sound.py  game_sound.py  maze_sound.py
bomberman/view/: __init__.py  animation.py  entity_view.py  game_view.py  maze_view.py  obstacle_view.py  panel_view.py  player_view.py  view.py
boomgame/: __init__.py  main.py
boomgame/controller/: __init__.py
boomgame/data/game/: boom.json
boomgame/data/maze/: 14.txt  17.txt  18.txt  25.txt  33.txt  4.txt  47.txt  59.txt  6.txt  67.txt  69.txt  76.txt  8.txt
boomgame/data/menu/: main.json
boomgame/data/original/BOOM Music/: BOOM Music 1.m4a
boomgame/data/original/English.lproj/: Continue.nib  NetAccess.nib
boomgame/data/original/English.lproj/BOOMHelp/pgs/: history.html
boomgame/data/original/English.lproj/BOOMHelp/sty/: boom_help.css
boomgame/data/original/Italian.lproj/: InfoPlist.strings  Localizable.strings  NewTopScore.nib  URLs.strings
boomgame/data/original/Italian.lproj/BOOMHelp/: BOOMHelp.html
boomgame/data/original/Italian.lproj/BOOMHelp/pgs/: story.html
boomgame/data/theme/: default.json
boomgame/menu/: element.py  menu.py
boomgame/model/: __init__.py  entity.py  events.py  game.py  maze.py
boomgame/sound/: __init__.py  game_sound.py  maze_sound.py
boomgame/view/: entity_view.py  game_view.py  maze_view.py  panel_view.py
data/game/: test.json
data/maze/: 19.txt  21.txt  42.txt  50.txt  58.txt  65.txt  7.txt  77.txt  9.txt
data/menu/: main.json
data/menu/lang/: fr.json
data/original/: BOOM Levels.plist  BOOM Saved Game.icns
data/original/BOOM Music/: BOOM Music 7.m4a
data/original/English.lproj/: Registration.nib
data/original/English.lproj/BOOMHelp/pgs/: distribution.html  releasenotes.html
data/original/Italian.lproj/BOOMHelp/: BOOMHelp.helpindex
data/original/Italian.lproj/BOOMHelp/pgs/: acknowledgements.html  distribution.html  updates.html
deploy/: .gitignore
deploy/linux/: .gitignore  BOOM.spec  build.sh
deploy/linux/boom/DEBIAN/: control.template
deploy/linux/boom/usr/share/applications/: BOOM.desktop.template
deploy/macos/: BOOM.spec
deploy/web/: build.sh  main.py
deploy/windows/: BOOM.spec
original_data/: BOOM Levels.xml
original_data/English.lproj/: About.nib  NewTopScore.nib
original_data/English.lproj/BOOMHelp/: BOOMHelp.html
original_data/English.lproj/BOOMHelp/pgs/: onlinescores.html
original_data/Italian.lproj/: MainMenu.nib  Reminder.nib
original_data/Italian.lproj/BOOMHelp/pgs/: contact.html  faq.html  onlinescores.html  whatsboom.html
original_data/Italian.lproj/BOOMHelp/sty/: boom_help.css
src/boomgame/: __init__.py  main.py
src/boomgame/controller/: control.py  controller.py
src/boomgame/data/maze/: 0.txt  10.txt  16.txt  23.txt  34.txt  41.txt  43.txt  52.txt  62.txt  64.txt  66.txt  75.txt
src/boomgame/data/sound/: convert.sh
src/boomgame/data/theme/: in_game.json
src/boomgame/designpattern/: observable.py  observer.py
src/boomgame/menu/: __init__.py  actions.py  element.py  element_properties.py  menu.py  theme.py
src/boomgame/model/: __init__.py  entity.py  events.py  game.py  maze.py  timer.py  vector.py
src/boomgame/sound/: __init__.py  entity_sound.py  game_sound.py  maze_sound.py
src/boomgame/view/: __init__.py  animation.py  entity_view.py  game_view.py  maze_view.py  panel_view.py  view.py
