[metadata]
name = bomberman
version = attr: bomberman.__version__
author = Raphael Reme
author_email = raphaelreme-dev@protonmail.com
description = Bomberman game done in python with pygame.
keywords = game, bomberman, BOOM
license = MIT
url = https://github.com/raphaelreme/bomberman
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pygame

include_package_data = True

[options.packages.find]
exclude=
    tests*

[options.entry_points]
console_scripts =
    bomberman = bomberman.main:main
    boom_version = bomberman:display_version
