[metadata]
name = bomberman
version = attr: bomberman.__version__
author = Raphael Reme
author_email = raphaelreme-dev@protonmail.com
description = Bomberman game done in python with pygame.
keywords = game, bomberman, BOOM
license = MIT
url = https://github.com/raphaelreme/bomberman
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find_namespace:
python_requires = >=3.6
install_requires =
    pygame
    importlib-resources; python_version<"3.10"

[options.package_data]
* =
    *.png
    *.json
    *.txt
    *.wav
    *.ttf
    *.ogg
    py.typed


[options.packages.find]
exclude=
    tests*
    deploy*
    bomberman.data.original*

[options.entry_points]
console_scripts =
    bomberman = bomberman.main:main
    boom_version = bomberman:display_version
